crates/solidity/testing/snapshots/bindings_output/expressions/elementary_casting/generated/0.5.3-failure.txt
# This file is generated automatically by infrastructure scripts (crates/solidity/outputs/cargo/tests/src/bindings_output/runner.rs:37:18). Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or AssemblyKeyword or BoolKeyword or BreakKeyword or ByteKeyword or BytesKeyword or CloseBrace or ContinueKeyword or DecimalLiteral or DoKeyword or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or EmitKeyword or FalseKeyword or FixedKeyword or ForKeyword or FunctionKeyword or HexLiteral or Identifier or IfKeyword or IntKeyword or MappingKeyword or NewKeyword or OpenBrace or OpenBracket or OpenParen or ReturnKeyword or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or TypeKeyword or UfixedKeyword or UintKeyword or WhileKeyword.
   ╭─[input.sol:6:9]
   │
 6 │ ╭─▶         payable(a).call("");
   ┆ ┆   
 8 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯
References and definitions: 
    ╭─[input.sol:1:1]
    │
  1 │ contract Test {
    │          ──┬─  
    │            ╰─── name: 1
  2 │     using Lib for uint;
    │           ─┬─  
    │            ╰─── ref: 4
    │ 
  4 │     function test(address a) public {
    │              ──┬─         ┬  
    │                ╰───────────── name: 2
    │                           │  
    │                           ╰── name: 3
  5 │         address(this).balance;
    │                       ───┬───  
    │                          ╰───── ref: built-in
    │ 
 11 │ library Lib {
    │         ─┬─  
    │          ╰─── name: 4
 12 │     function noop(uint x) public returns (uint) {}
    │              ──┬─      ┬  
    │                ╰────────── name: 5
    │                        │  
    │                        ╰── name: 6
────╯
Definiens: 
    ╭─[input.sol:1:1]
    │
  1 │ ╭─────▶ contract Test {
    ┆ ┆ ┆     
  3 │ │ ╭───▶ 
  4 │ │ │         function test(address a) public {
    │ │ │                       ────┬────  
    │ │ │                           ╰────── definiens: 3
    ┆ ┆ ┆     
  8 │ │ ├───▶     }
    │ │ │             
    │ │ ╰───────────── definiens: 2
  9 │ ├───│ ▶ }
    │ │   │       
    │ ╰─────────── definiens: 1
 10 │     ╭─▶ 
    ┆     ┆   
 12 │     │       function noop(uint x) public returns (uint) {}
    │     │   ─────────────────────┬───┬─────────────────────────  
    │     │                        ╰─────────────────────────────── definiens: 6
    │     │                            │                           
    │     │                            ╰─────────────────────────── definiens: 5
 13 │     ├─▶ }
    │     │       
    │     ╰─────── definiens: 4
────╯
